bulletin-board-app/tf/main.tf
locals {
 user_data = <<EOF
   #!/bin/bash
   echo ECS_CLUSTER=${var.cluster_name} >> /etc/ecs/ecs.config
 EOF
}

data "aws_availability_zones" "available" {}

resource "aws_vpc" "ecs_vpc" {
 cidr_block           = var.vpc_cidr
 tags = { Name = "${var.vpc_prefix}-tf"} 
}

resource "aws_subnet" "public" {
count = 2
 vpc_id                  = aws_vpc.ecs_vpc.id
 cidr_block              = cidrsubnet(aws_vpc.ecs_vpc.cidr_block, 2, count.index)
 map_public_ip_on_launch = true
 availability_zone       = element(data.aws_availability_zones.available.names, count.index)
 tags = { Name = "public-subnet-${count.index}" }
}

resource "aws_subnet" "private" {
count = 2
 vpc_id                  = aws_vpc.ecs_vpc.id
 cidr_block              = cidrsubnet(aws_vpc.ecs_vpc.cidr_block, 2, count.index)
 availability_zone       = element(data.aws_availability_zones.available.names, count.index)
 tags = { Name = "private-subnet-${count.index}" }
}

resource "aws_internet_gateway" "internet_gateway" {
 vpc_id = aws_vpc.ecs_vpc.id
 tags = { Name = "${var.vpc_prefix}-igw-tf"}
}

resource "aws_eip" "nat_gateway" {}

resource "aws_nat_gateway" "nat_gw" {
   allocation_id = aws_eip.nat_gateway.id
  subnet_id     = aws_subnet.private[0].id
  tags = {
    Name = "NAT_gw-tf"
  }

  # To ensure proper ordering, it is recommended to add an explicit dependency
  # on the Internet Gateway for the VPC.
  depends_on = [aws_internet_gateway.internet_gateway]
}

resource "aws_route_table" "route_table" {
 vpc_id = aws_vpc.ecs_vpc.id
 route {
   cidr_block = "0.0.0.0/0"
   gateway_id = aws_internet_gateway.internet_gateway.id
}
}

resource "aws_route_table" "private_route_table" {
 vpc_id = aws_vpc.ecs_vpc.id
 route {
   cidr_block = "0.0.0.0/0"
   gateway_id = aws_nat_gateway.nat_gw.id
  }
  tags = {Name = "private-rt-tf"}
}

resource "aws_route_table_association" "subnet_route" {
 subnet_id      = aws_subnet.public[0].id
 route_table_id = aws_route_table.route_table.id
}

resource "aws_route_table_association" "subnet2_route" {
 subnet_id      = aws_subnet.public[1].id
 route_table_id = aws_route_table.route_table.id
}

resource "aws_route_table_association" "priv_subnet1_route" {
 subnet_id      = aws_subnet.private[0].id
 route_table_id = aws_route_table.private_route_table.id
}

resource "aws_route_table_association" "priv_subnet2_route" {
 subnet_id      = aws_subnet.private[1].id
 route_table_id = aws_route_table.private_route_table.id
}

resource "aws_security_group" "app_sg" {
  vpc_id = aws_vpc.ecs_vpc.id
  ingress {
    from_port = 80
    to_port = 80
    protocol =  "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
        from_port = 443
    to_port = 443
    protocol =  "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = { Name = "app-sg-tf"}
  }

resource "aws_security_group" "ecs_cluster_sg" {
  vpc_id = aws_vpc.ecs_vpc.id
  ingress{
 	    from_port   = 32153 
	    to_port     = 65535
	    protocol    = "tcp"
	    security_groups = ["${aws_security_group.app_sg.id}"]
	}
  ingress {
            from_port   = 22
            to_port     = 22
            protocol    = "tcp"
            security_groups = ["${aws_security_group.app_sg.id}"]
        }

  egress {
      from_port   = 0
      to_port     = 0
      protocol    = "-1"
      cidr_blocks = ["0.0.0.0/0"]
	}
 tags = {
   Name = "ecs-cluster-sg"
 }
}

resource "aws_launch_template" "ecs_lt" {
 name_prefix   = "ecs-template"
 image_id      = var.ami
 instance_type = var.instance_type
 vpc_security_group_ids = [aws_security_group.ecs_cluster_sg.id]
 iam_instance_profile {
   name = "LabInstanceProfile"
 }
 block_device_mappings {
   device_name = "/dev/xvda"
   ebs {
     volume_size = 30
     volume_type = "gp2"
   }
 }
 tag_specifications {
   resource_type = "instance"
   tags = {
     Name = "${var.instance_name_prefix}"
   }
 }
 user_data = base64encode(local.user_data)
}

resource "aws_autoscaling_group" "ecs_asg" {
 vpc_zone_identifier = aws_subnet.private[*].id
 desired_capacity    = 1
 max_size            = 1
 min_size            = 1
 protect_from_scale_in = true
 launch_template {
   id      = aws_launch_template.ecs_lt.id
   version = "$Latest"
 }
}

resource "aws_lb" "ecs_alb" {
name               = "app-lb-tf"
 internal           = false
 load_balancer_type = "application"
 security_groups    = [aws_security_group.app_sg.id]
 subnets            = aws_subnet.private[*].id
}

resource "aws_lb_listener" "ecs_alb_listener" {
 load_balancer_arn = aws_lb.ecs_alb.arn
 port              = 80
 protocol          = "HTTP"

 default_action {
   type             = "forward"
   target_group_arn = aws_lb_target_group.ecs_tg.arn
 }
}

resource "aws_lb_target_group" "ecs_tg" {
 name        = "ecs-target-group"
 port        = 80
 protocol    = "HTTP"
 target_type = "instance"
 vpc_id      = aws_vpc.ecs_vpc.id

 health_check {
   path = "/"
 }
}

resource "aws_ecs_cluster" "ecs_cluster" {
 name = var.cluster_name
}

resource "aws_ecs_capacity_provider" "ecs_capacity_provider" {
  name = "bb-cp"
  auto_scaling_group_provider {
    auto_scaling_group_arn = aws_autoscaling_group.ecs_asg.arn
  }
}

resource "aws_ecs_cluster_capacity_providers" "cluster-cp" {
cluster_name = aws_ecs_cluster.ecs_cluster.name
capacity_providers = [aws_ecs_capacity_provider.ecs_capacity_provider.name]
 default_capacity_provider_strategy {
   base              = 1
   weight            = 100
   capacity_provider = aws_ecs_capacity_provider.ecs_capacity_provider.name
 }
}

resource "aws_ecs_task_definition" "bb_task_definition" {
 family             = "bb-task"
 network_mode       = "bridge"
 execution_role_arn = var.lab_role
 task_role_arn      = var.lab_role
 cpu                = 256
 memory             = 256
 runtime_platform {
   operating_system_family = "LINUX"
   cpu_architecture        = "X86_64"
 }
 container_definitions = jsonencode([
   {
     name      = "bb"
     image     = var.container_image
     cpu       = 0
     essential = true
     portMappings = [
       {
         containerPort = var.container_port
         hostPort      = 0
         protocol      = "tcp"
         appProtocol   = "http"
       }
     ]
   }
 ])
}

resource "aws_ecs_service" "ecs_service" {
 name            = "bb-ecs-srv"
 cluster         = aws_ecs_cluster.ecs_cluster.id
 task_definition = aws_ecs_task_definition.bb_task_definition.arn
 desired_count   = 1
 force_new_deployment = true

 triggers = {
   redeployment = timestamp()
 }

 capacity_provider_strategy {
   capacity_provider = aws_ecs_capacity_provider.ecs_capacity_provider.name
   weight            = 100
 }

 load_balancer {
   target_group_arn = aws_lb_target_group.ecs_tg.arn
   container_name   = "bb"
   container_port   = var.container_port
 }

 depends_on = [aws_autoscaling_group.ecs_asg]
}
